react-ui/src/components/Detail/Detail.styl
.main--container
  height 90vh
  width 100vw

.detail--container
  display grid
  width auto
  grid-template-rows: 400px 150px
  justify-content center
  align-items center

.detail--innerbox
  display flex
  justify-content center

.detail--textbox
  text-align center
  display grid
  justify-content center
  align-items center
  margin-left 50px
  letter-spacing 2.5px
  border 2px solid #bada55
  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
  text-shadow: 0 1px 1px rgba(0,0,0,0.12), 0 1px 1px rgba(0,0,0,0.24);
  & h1, h2, h3, h4, h5, h6
    margin 6px
  & a
    color #0033bb
    text-decoration none

.detail--innerbox img
  grid-column: 1/ span 1;
  grid-row: 1 / -1
  height: 200px
  width auto
  border 2px solid #bada55
  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);

.back-button--container
  grid-row 2 / span 1
  display flex
  justify-content center
  align-items center

.back-button--container button
  position fixed
  height: 100px
  width: 100vw
  font-size 1.5rem
  left 0
  bottom 0
  padding 6px 9px 6px 9px
  background gray
  font-weight 600
  letter-spacing 3px
  word-spacing: 3px
  color white
  border 1px solid gray
  cursor pointer
  box-shadow: 0 1px 2px rgba(0,0,0,0.12), 0 1px 1px rgba(0,0,0,0.24);
  transition all .2s
  &:hover
    color gray
    background white
  &:active
    outline none
    box-shadow inset 0px 0px 4px

@media only screen and (min-width: 780px)

  .detail--textbox
    padding: 10px
    width 500px
    & h4
      font-size 2rem
    & h5
      font-size 1.2rem
    & h6
      font-size 1rem

  .detail--innerbox img
    height 400px


  .back-button--container button
    height 50px
    width 752px
    font-size 1rem
    position relative
    border-radius 3px
    &:active
      top 2px

